--- a/src/app/home/schema-utils/wizards/step-fields/step-fields.component.scss
+++ b/src/app/home/schema-utils/wizards/step-fields/step-fields.component.scss
@@ -1,3 +1,6 @@
+@import "src/assets/scss/bootstrap/_functions.scss";
+@import "src/assets/scss/bootstrap/_variables.scss";
+
 .attributes {
     min-height: calc(100vh - 464px);
     max-height: calc(100vh - 464px);
@@ -6,7 +9,7 @@
     .attribute-item {
         min-height: 40px;
         max-height: 40px;
-
+        overflow: hidden;
         .attribute-action {
             min-width: 16px;
             max-width: 16px;
