--- a/src/app/home/schema-utils/wizards/wizards.component.html
+++ b/src/app/home/schema-utils/wizards/wizards.component.html
@@ -251,7 +251,7 @@
                         [ngbTooltip]="step.value.name">{{step.value.name}}</span>
                 </div>
             </div>
-            <div class="d-flex align-items-center">
+            <div *ngIf="edit.status" class="d-flex align-items-center">
                 <span class="dsi dsi-edit mr-3 sub-heading" (click)="showStepsWindow=true"></span>
                 <button type="button" class="btn btn-outline-primary" (click)="showStepsWindow=true">
                     <span class="dsi dsi-plus"></span>
@@ -270,7 +270,7 @@
                         Actions
                     </div>
                 </div>
-                <button type="button" class="btn btn-white fw-400 font-12 d-flex align-items-center"
+                <button *ngIf="edit.status" type="button" class="btn btn-white fw-400 font-12 d-flex align-items-center"
                     (click)="removeStep()">
                     <span class="dsi dsi-trash mr-2 sub-heading"></span>
                     <span>Delete Step</span>
