--- a/src/app/utils/structure-field-properties/structure-field-properties.component.html
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.html
@@ -75,7 +75,7 @@
             <span class="ml-2 text-dark font-14">Unique</span>
           </div>
           <div class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
-            *ngIf="formItem.get('properties.password') && formItem.get('key').value !== '_self'">
+            *ngIf="formItem.get('properties.password') && formItem.get('key').value !== '_self' && (formItem.get('properties._detailedType').value !== 'email' && form.get('properties._detailedType').value !== 'enum')">
             <odp-checkbox id="secureAttr" [edit]="{ status: canEdit }"
               (checkedChange)="toggleCheck(formItem.get('properties.password'))"
               [checked]="formItem.get('properties.password').value"></odp-checkbox>
