--- a/src/app/home/control-panel/user/bulk-import-status/bulk-import-status.component.html
+++ b/src/app/home/control-panel/user/bulk-import-status/bulk-import-status.component.html
@@ -6,11 +6,10 @@
         <div class="text-secondary mt-2">Processing...</div>
     </div>
 </div>
-<div class="d-flex flex-column position-relative">
-    <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
-    <div class="options d-flex justify-content-between align-items-center w-100 border-bottom p-3">
-        <div class="font-weight-bold font-16">Report</div>
-        <div class="text-muted">Showing {{loadedCount}} of {{totalCount}}</div>
+<div class="d-flex flex-column position-relative page-padding bg-light-gray">
+    <div class="options d-flex justify-content-between align-items-center w-100 pb-5">
+        <div class="fw-600 font-22">Report</div>
+        <div class="sub-heading">Showing {{loadedCount}} of {{totalCount}}</div>
     </div>
     <div class="user-list w-100 px-3 pt-3">
         <div class="grid-container">
