--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -52,7 +52,8 @@
             </button>
           </div>
 
-          <span class="font-normal fw-400 sub-heading">{{ selectedBot?._id }}</span>
+          <span class="font-normal fw-400 sub-heading" (click)="appService.copyToClipboard(selectedBot?._id)">{{
+            selectedBot?._id }}</span>
         </div>
         <div class="d-grid">
           <div style="margin-top: 45px">
