--- a/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
+++ b/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
@@ -44,11 +44,11 @@
 
                     <div class="group-actions">
                         <button type="button" class="btn btn-link text-muted p-1" (click)="openEditAttributeModal(attr)"
-                            *ngIf="hasPermission('PMBU')">
+                            ngbTooltip="Edit" *ngIf="hasPermission('PMBU')">
                             <span class="dsi dsi-edit"></span>
                         </button>
                         <button type="button" class="btn btn-link text-muted p-1" (click)="deleteAdditionInfo(attr.key)"
-                            *ngIf="hasPermission('PMBU')">
+                            ngbTooltip="Delete" *ngIf="hasPermission('PMBU')">
                             <span class="dsi dsi-trash"></span>
                         </button>
                     </div>
