--- a/src/app/utils/structure-field/structure-field.component.scss
+++ b/src/app/utils/structure-field/structure-field.component.scss
@@ -55,8 +55,8 @@
   }
 
   .error-icon {
-    top: 7px;
-    left: 90%;
+    top: 5px !important;
+    right: 10px !important;
   }
 
   .searching-relation {
