--- a/src/styles.scss
+++ b/src/styles.scss
@@ -389,7 +389,7 @@ $odp-ui-author-theme: mat-light-theme((color: (primary: $odp-ui-author-primary,
 
 .error-icon {
   top: 11px;
-  left: 92%;
+  right: 10px;
 }
 
 .agent-arch-select {
