--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.scss
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.scss
@@ -33,6 +33,15 @@
   }
 }
 
+.editor-error-message {
+  top: -100px;
+  left: 5px;
+  transition: 0.2s;
+
+  &.show {
+    top: 4px;
+  }
+}
 
 
 .field-wrapper {
