--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -65,7 +65,7 @@
               <span class="dsi dsi-mail font-14 align-self-center-2 mr-2"></span>
               <span>{{ details?.username }}</span>
             </div>
-            <div class="d-flex mr-auto font-12 text-secondary">
+            <div class="d-flex mr-auto font-12 text-secondary" *ngIf="details?.lastLogin">
               <span class="dsi dsi-clock font-14 align-self-center mr-2"></span>
               <span ngbTooltip="Last login" placement="right">{{
                 formatLastLogin(details?.lastLogin, true)
