--- a/src/app/home/schema-builder/schema-builder.component.html
+++ b/src/app/home/schema-builder/schema-builder.component.html
@@ -205,7 +205,7 @@
                 </span>
               </div>
             </div>
-            <div class='d-flex flex-column w-100'>
+            <div class='d-flex flex-column w-100 ma-vh-100 overflow-auto'>
               <div *ngIf="experienceSideNavActiveTab == 2" class="schema-creator scroll position-relative w-100"
                 id="schema-creator" [scrollTop]="schemaFieldheight">
                 <div class="builder-body border-left">
@@ -241,7 +241,7 @@
           <odp-logs [serviceObj]="serviceObj"></odp-logs>
         </ng-container>
         <ng-container *ngIf="activeTab == 10">
-          <div class="d-flex flex-column w-100">
+          <div class="d-flex flex-column w-100 max-vh-100  overflow-auto">
             <div class="builder-body scroll p-3 position-relative hover" (click)="copyJSON(exampleJSON)">
               <div class="d-flex align-items-center position-absolute copy-symbol">
                 <span class="text-muted mr-2">Click to Copy</span>
@@ -253,7 +253,7 @@
           </div>
         </ng-container>
         <ng-container *ngIf="activeTab == 11">
-          <div class="d-flex flex-column w-100">
+          <div class="d-flex flex-column w-100 max-vh-100  overflow-auto">
             <div class="builder-body scroll p-3 position-relative hover" (click)="copyJSON(exampleSchema)">
               <div class="d-flex align-items-center position-absolute copy-symbol">
                 <span class="text-muted mr-2">Click to Copy</span>
