--- a/src/assets/scss/bootstrap/utilities/_sizing.scss
+++ b/src/assets/scss/bootstrap/utilities/_sizing.scss
@@ -2,19 +2,47 @@
 
 // Width and height
 
-@each $prop, $abbrev in (width: w, height: h) {
-  @each $size, $length in $sizes {
-    .#{$abbrev}-#{$size} { #{$prop}: $length !important; }
+@each $prop,
+$abbrev in (width: w, height: h) {
+
+  @each $size,
+  $length in $sizes {
+    .#{$abbrev}-#{$size} {
+      #{$prop}: $length  !important;
+    }
   }
 }
 
-.mw-100 { max-width: 100% !important; }
-.mh-100 { max-height: 100% !important; }
+.mw-100 {
+  max-width: 100% !important;
+}
+
+.mh-100 {
+  max-height: 100% !important;
+}
 
 // Viewport additional helpers
 
-.min-vw-100 { min-width: 100vw !important; }
-.min-vh-100 { min-height: 100vh !important; }
+.min-vw-100 {
+  min-width: 100vw !important;
+}
 
-.vw-100 { width: 100vw !important; }
-.vh-100 { height: 100vh !important; }
+.min-vh-100 {
+  min-height: 100vh !important;
+}
+
+.max-vw-100 {
+  max-width: 100vw !important;
+}
+
+.max-vh-100 {
+  max-height: 100vh !important;
+}
+
+.vw-100 {
+  width: 100vw !important;
+}
+
+.vh-100 {
+  height: 100vh !important;
+}
