Defect DEF2109 fix

--- a/src/app/home/app-manage/app-manage.component.html
+++ b/src/app/home/app-manage/app-manage.component.html
@@ -48,12 +48,12 @@
     <div class="tab-content w-100 pt-3">
       <ng-container *ngIf="activeTab == 1">
         <div class="row" style="max-height: inherit">
-          <div class="col-4" style="padding: 20px 0 20px 20px">
+          <div class="col-4 upload-section">
             <span class="ml-3 font-weight-bold">Logo</span>
             <div class="d-flex align-items-start pt-2 mb-4">
               <div class="d-flex flex-column">
                 <span class="d-flex">
-                  <span class="text-secondary pl-3" style="width: 22vw">Upload your logo, to add your brand identity to
+                  <span class="text-secondary pl-3" style="width: 20vw">Upload your logo, to add your brand identity to
                     app center
                     (Recommended size: 216px x 72 px)</span>
                   <span class="ml-auto text-danger mr-3 hover" (click)="appData.logo.full = undefined"
